<resources>
    <string name="app_name">Cycleasy</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="exercise">Exercise</string>
    <string name="route">Route</string>
    <string name="racks">Racks</string>
    <string name="me">Me</string>
    <string name="this_is_the_profile_page">This is the profile page</string>
    <string name="this_is_the_edit_profile_page">This is the edit profile page</string>
    <string name="this_is_the_racks_page">This is the racks page</string>
    <string name="this_is_the_route_page">This is the route page</string>
    <string name="this_is_the_favpath_page">This is the favpath page</string>
    <string name="this_is_the_exercise_page">This is the exercise page</string>
    <string name="this_is_the_cycling_history_page">This is the cycling history page</string>
    <string name="view_edit_your_favorite_path">View/Edit your favorite path</string>
    <string name="your_profile">Your profile</string>
    <string name="your_cycling_history">Your cycling history</string>
    <string name="launchscreen">launchscreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="startexercise">startexercise</string>
    <string name="stopexercise">stopexercise</string>
    <string name="textview">TextView</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="speed">Speed:</string>
    <string name="average_speed">Average Speed</string>
    <string name="profilepicture">profilepicture</string>
    <string name="hi_username">Hi! Username</string>
    <string name="toparrow">toparrow</string>
    <string name="mylocation">mylocation</string>
    <string name="_4_61km">4.61KM</string>
    <string name="_00_30_22">00:30:22</string>
    <string name="_8_43_km_h">8.43 KM/H</string>
    <string name="searchtitle">searchtitle</string>
    <string name="find_rack_button">find rack Button</string>
    <string name="find">FIND</string>
    <string name="searchicon">searchicon</string>
    <string name="where_to_park">where to park</string>
    <string name="hinttext">hinttext</string>
    <string name="searchhint">undefined</string>
    <string name="racks_searchhint">Where to park?</string>
    <string name="topsearchhint">Choose starting point</string>
    <string name="botsearchhint">Choose destination</string>
    <string name="racklocation">racklocation</string>
    <string name="exe_reptitle">YOUR EXERCISE REPORT</string>
    <string name="exe_disttext">Distance cycled</string>
    <string name="exe_durationcycled">Duration Cycled</string>
    <string name="exe_avespeed">Average Speed</string>
    <string name="exe_notification"> Your exercise is saved in <u>cycling history</u>.</string>
    <string name="gobackbuttondescription">gobackbutton</string>

</resources>
