<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="100dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="180dp"
                android:layout_height="134dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/hi_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilepic"
                app:layout_constraintStart_toEndOf="@id/profilepic"/>

            <ImageView
                android:id="@+id/profilepic"
                android:layout_width="117dp"
                android:layout_height="77dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/profilepicture"
                android:hapticFeedbackEnabled="false"
                android:src="@drawable/ic_cyclisticon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="629dp"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/favpath"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/rightarrowlight"
                android:text="@string/view_edit_your_favorite_path"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="@+id/cychistory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableEnd="@drawable/rightarrowlight" />


            <Button
                android:id="@+id/cychistory"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/rightarrowlight"
                android:text="@string/your_cycling_history"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="@+id/editprofile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favpath"
                android:drawableEnd="@drawable/rightarrowlight" />

            <Button
                android:id="@+id/editprofile"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/rightarrowlight"
                android:text="@string/your_profile"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cychistory"
                android:drawableEnd="@drawable/rightarrowlight" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>